--- a/assets/style/template-nav-footer.css
+++ b/assets/style/template-nav-footer.css
@@ -334,7 +334,8 @@ input[type="search"] {
   font-size: 1rem;
   width: 100%;
   line-height: 2;
-  padding: 0.375rem 1.25rem;
+  text-align: center;
+  padding: 0.375rem 0.5rem;
   -webkit-transition: border-color 0.2s;
   -moz-transition: border-color 0.2s;
   transition: border-color 0.2s;
@@ -350,6 +351,7 @@ input[type="search"]:focus {
 form.search-form {
   display: flex;
   justify-content: center;
+
 }
 
 label {
@@ -358,6 +360,7 @@ label {
   flex-basis: auto;
   align-self: center;
   margin-bottom: 0;
+  width: 55%;
 }
 
 input.search-field {
@@ -446,7 +449,7 @@ input.search-submit {
   .list-group-item img {
     width: 15px;
   }
-}
+
 
 
 @media (max-width: 450px) {
